enable access to token

--- a/.azure-pipelines/common-templates/guardian-analyzer.yml
+++ b/.azure-pipelines/common-templates/guardian-analyzer.yml
@@ -10,3 +10,5 @@ steps:
     userProvideBuildInfo: 'autoMsBuildInfo'
     setupCommandlinePicker: 'vs2022'
     policyName: 'M365'
+  env:
+    SYSTEM_ACCESSTOKEN: $(system.accesstoken)
