Updated default branch from features/2.0 to dev

--- a/.azure-pipelines/common-templates/create-pr.yml
+++ b/.azure-pipelines/common-templates/create-pr.yml
@@ -4,7 +4,7 @@
 parameters:
   - name: BaseBranch
     type: string
-    default: features/2.0
+    default: dev
   - name: TargetBranch
     type: string
     default: ""
